# ComputacionCuantica

./: .gitignore  AI_Fluency.md  BITACORA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FAQ.md  LICENSE  Makefile  PLAN_EXPANSION.md  Qiskit_en_este_repositorio.md  README.md  TRANSLATING.md  _config.yml  _toc.yml  bitacora.md  changelog.md  docker-compose.yml  environment.yml  estructura_del_proyecto.md  glosario.md  lecturas_recomendadas.md  mapa_visual_del_curso.md  mkdocs.yml  preguntas_frecuentes_avanzadas.md  pyproject.toml  referencias.md  requirements.txt  roadmap.md  run_on_hardware.py  ruta_de_estudio.md  tabla_cobertura.md
.devcontainer/: devcontainer.json
Cuadernos/: README.md
Ejercicios/: README.md  autoevaluacion.ipynb  autoevaluacion_modular.md  ejercicios_avanzados.md  ejercicios_basicos.md  ejercicios_intermedios.md  ejercicios_investigacion.md  evaluador.py  examen_certificacion.md  generador_examen.py
Imagenes/: README.md
Notas/: README.md
Resumenes/: 01_qubits_y_medicion.md  02_qiskit.md  03_algoritmos_y_phase_estimation.md  04_informacion_cuantica.md  05_correccion_y_fault_tolerance.md  06_hamiltonianos_ruido_y_medicion.md  07_variacionales_y_aplicaciones.md  08_complejidad_y_tomografia.md  09_simulacion_avanzada.md  10_recursos_cuanticos.md  11_topological_y_tensor.md  12_quantum_gravity_dqc.md  13_fotonico_y_rydberg.md  14_qldpc_y_decodificadores.md  15_qnlp_y_annealing.md  16_infraestructura_y_ci.md  17_hardware_comparativo_2025.md  18_rutas_y_carreras.md  19_glosario_extendido.md  20_matematicas_esenciales.md  README.md
(+395 files in other folders)
