[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "computacion-cuantica"
version = "2.5.0"
description = "Curso interactivo de Computación Cuántica: Teoría y Práctica"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["quantum computing", "qiskit", "education", "VQE", "QAOA"]
authors = [{ name = "LegalIntermediaSL" }]

dependencies = [
    "qiskit>=2.0,<3.0",
    "qiskit-aer>=0.15,<1.0",
    "streamlit>=1.35,<2.0",
    "numpy>=1.26,<3.0",
    "scipy>=1.12,<2.0",
    "matplotlib>=3.8,<4.0",
    "pandas>=2.1,<3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "nbconvert>=7.0", "jupyter>=1.0"]
chemistry = ["qiskit-nature[pyscf]"]
tket = ["pytket", "pytket-qiskit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
markers = [
    "slow: tests que requieren simulación pesada (excluidos con -m 'not slow')",
]

[tool.ruff]
line-length = 100
target-version = "py311"
